--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ fastapi==0.116.1
 uvicorn==0.35.0
 pytest==8.4.1
 httpx==0.28.1
+psycopg2-binary==2.9.10
+SQLAlchemy==2.0.38
+solana==0.35.1
+solders==0.23.0
