--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -3,7 +3,7 @@ region: nyc
 services:
 - name: api
   github:
-    repo: YOUR_GITHUB_USERNAME/YOUR_REPO_NAME
+    repo: Wardall11/hackillinois
     branch: main
   dockerfile_path: Dockerfile
   envs:
@@ -25,16 +25,20 @@ services:
   - key: SOLANA_PRIVATE_KEY
     scope: RUN_TIME
     value: "[231,178,129,90,93,203,217,120,116,162,83,6,33,255,65,211,205,139,193,95,222,25,155,215,196,100,147,54,122,246,27,120,62,48,27,23,39,184,197,252,62,168,163,206,46,13,159,135,84,7,207,172,249,106,60,189,204,37,131,67,80,54,93,75]"
+  routes:
+  - path: /server
   http_port: 8000
 
 static_sites:
 - name: frontend
   github:
-    repo: YOUR_GITHUB_USERNAME/YOUR_REPO_NAME
+    repo: Wardall11/hackillinois
     branch: main
   source_dir: frontend
   build_command: npm run build
   output_dir: dist
+  routes:
+  - path: /
   envs:
   - key: VITE_API_BASE
     scope: RUN_AND_BUILD_TIME
