--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ psycopg2-binary==2.9.10
 SQLAlchemy==2.0.38
 solana==0.35.1
 solders>=0.21.0,<0.22.0
+pydantic>=2.0
 google-generativeai
 python-dotenv
